default page completed. fixed styling and routing

--- a/client/capstone-project/src/index.html
+++ b/client/capstone-project/src/index.html
@@ -5,7 +5,7 @@
   <title>Cavern of Books</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="book_icon_zP5_icon.ico">
 </head>
 <body>
   <app-root></app-root>
